<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- XTify -->
    <!-- Productivo -->
    <!-- <string name="xtify_app_key">1bfa2c42-b083-4f27-b2c3-f52acb2d19bc</string> -->
    <string name="xtify_app_key">be309566-dde0-40da-a247-5f0338fa4c33</string>
    <string name="xtify_sender_id">1073354896351</string>

    <!-- Maps Key -->
    <string name="maps_api_key">AIzaSyC-IALoh0jrU1YLfuL9Xp6nClAdtono21M</string>
    <string name="app_name">Payless</string>
    <string name="unknown"></string>
    <string name="loading">Loading...</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="server_error"></string>
    <string name="ok">OK</string>
    <string name="home_title">Payless ShoeSource</string>

    <!-- Common -->
    <string name="current_location">GPS/Current Location</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="states">States</string>
    <string name="select_states">Select State</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear</string>
    <string name="enable_push_notifications">Do you want to enable Push Notifications?</string>
    <string name="enable_location_service">Do you want to enable Location Based Service?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_coupons">My Coupons</string>
    <string name="menu_look_book">Look Book</string>
    <string name="menu_social">Social</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- Shop -->
    <string name="shop_title">Shop @ Payless</string>

    <!-- Stores -->
    <string name="stores_title">Store Finder</string>
    <string name="enter_city_and_state">Enter city and state.</string>
    <string name="please_enter_zipcode">Please enter zip code.</string>
    <string name="please_enable_location_services">Please enable location services.</string>
    <string name="store_distance">Distance: %1$s</string>
    <string name="store_hours">STORE HOURS</string>
    <string name="searching_location">Searching location...</string>

    <!-- LookBook -->
    <string name="look_book_title">Search Look Book</string>
    <string name="all">All</string>
    <string name="look_book_results_title">Results</string>

    <!-- MyCoupons -->
    <string name="my_coupons_instructions">Instructions: Please choose an offer from the list below!</string>
    <string name="my_coupons_expires">Expires on: %1$s</string>
    <string name="my_coupons_promo_code">Promo Code: %1$s</string>
    <string name="special_deal">Special Deal</string>

    <!-- Social -->
    <string name="social">Social</string>

    <!-- Profile -->
    <string name="submit">Submit</string>
    <string name="my_profile">My Profile</string>
    <string name="details">Details</string>
    <string name="first_name_label">First Name*:</string>
    <string name="first_name_placeholder">Enter First Name</string>
    <string name="last_name_label">Last Name*:</string>
    <string name="last_name_placeholder">Enter Last Name</string>
    <string name="birth_date_label">Birth Date*:</string>
    <string name="birth_date_button">Select Date</string>
    <string name="gender_label">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_mail">Phone/Email</string>
    <string name="cell_phone_label">Cell Phone:</string>
    <string name="cell_phone_placeholder">Enter Cell Phone</string>
    <string name="email_label">Email*:</string>
    <string name="email_placeholder">Enter Email</string>
    <string name="address">Address</string>
    <string name="address_line_1_label">Address Line 1:</string>
    <string name="address_line_2_label">Address Line 2:</string>
    <string name="address_placeholder">Enter Address</string>
    <string name="city_label">City:</string>
    <string name="city_placeholder">Enter City</string>
    <string name="state_label">State:</string>
    <string name="state_placeholder">Select State</string>
    <string name="zipcode_label">Zip Code:</string>
    <string name="zipcode_placeholder">Enter Zip Code</string>
    <string name="marketing_channels_description">By giving Payless ShoeSource your information and checking any of the boxes below, you are giving us permission to send future marketing messages from Payless ShoeSource via the selected marketing channels.</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="text_message">Text Message</string>
    <string name="email">E-mail</string>
    <string name="direct_mail">Direct Mail</string>
    <string name="location_services">Location Services</string>
    <string name="profile_thanks">Thank you for editing your profile!</string>
    <string name="invalid_email">Please, enter a valid email</string>
    <string name="mandatory_fields">* This fields are mandatory</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_thanks">Thank you for editing your settings!</string>
    <string name="settings_phone_disclaimer">Please complete cell phone number.</string>
    <string name="settings_address_disclaimer">Please complete Address fields.</string>
    
    <string name="map">Map</string>

</resources>