<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_corner_round"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_location"
                style="@style/store_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.13"
                android:checked="true" />

            <TextView
                android:id="@+id/gps_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.87"
                android:text="@string/current_location"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/forms_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:id="@+id/zipcode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <RadioButton
                android:id="@+id/radio_zipcode"
                style="@style/store_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.13" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.26"
                android:text="@string/zip_code"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/forms_text_size" />

            <EditText
                android:id="@+id/zipcode_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="1dp"
                android:layout_weight="0.61"
                android:background="@color/white"
                android:hint="@string/enter_zip_code"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/forms_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:id="@+id/city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <RadioButton
                android:id="@+id/radio_city"
                style="@style/store_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.13" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/city"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/forms_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/states"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/forms_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.62"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/white"
                    android:hint="@string/enter_city"
                    android:singleLine="true"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/forms_text_size" />

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_search" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_clear" />
    </LinearLayout>

</LinearLayout>